Fix editor button svg styles for dialog targets
This corrects the link icon being invisible as mentioned in #172

--- a/app/assets/stylesheets/lexxy-editor.css
+++ b/app/assets/stylesheets/lexxy-editor.css
@@ -89,6 +89,7 @@
   position: relative;
 
   button[data-command],
+  button[data-dialog-target],
   summary {
     aspect-ratio: 1;
     block-size: 2lh;
